wip add video gen to backend api
